--- a/Sub-web/dell.html
+++ b/Sub-web/dell.html
@@ -4,19 +4,19 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Trang chủ</title>
-	<link rel="stylesheet" type="text/css" href="./css/main.css">
-	<link rel="stylesheet" type="text/css" href="./css/header.css">
-	<link rel="stylesheet" type="text/css" href="./css/body.css">
-	<link rel="stylesheet" type="text/css" href="./css/footer.css">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="../css/header.css">
+	<link rel="stylesheet" type="text/css" href="../css/body.css">
+	<link rel="stylesheet" type="text/css" href="../css/footer.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/componentLaptop.css">
+	<link rel="stylesheet" type="text/css" href="../css/componentLaptop.css">
 </head>
 <body>
 	<button id="scroll__top"><i class="fa fa-arrow-up"></i></button>
 	<div class="header">
 		<div class="header__head">
 			<div class="component__header">
-				<div class="header__logo"><a href="index.html"><div id="header__logo"></div></a></div>
+				<div class="header__logo"><a href="../index.html"><div id="header__logo"></div></a></div>
 				<div class="header__search">
 					<form method="get">
 						<input type="text" name="txtSearch" placeholder="Nhập tên máy tính cần tìm" maxlength="50" class="header__search-input">
@@ -90,33 +90,32 @@
 				</div>
 			</div>
 		</div>
-		
 		<div class="main__distance"></div>
 
 		<div class="main__star">
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image mac1"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Apple MacBook Air 2017 i5 1.8GHz/8GB/128GB (MQD32SA/A)<a></div>
-				<div class="product-price">19.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell1"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Dell Inspiron 3581 i3 7020U/4GB/1TB/Win10 (P75F005N81A)<a></div>
+				<div class="product-price">12.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i3 Kabylake, 7020U, 2.30 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	4 GB, DDR4 (2 khe), 2133 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 6000</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa tích hợp, Intel® UHD Graphics 620</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 17 mm, 1.35 Kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">	Dày 20.66 mm, 2.28 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -126,28 +125,30 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image mac2"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Apple Macbook Pro Touch 2019 i5 1.4GHz/8GB/128GB <a></div>
-				<div class="product-price">32.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell2"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Dell Inspiron N3580 i5 8265U/4GB/1TB/Win10 (P75F106N80I)
+
+<a></div>
+				<div class="product-price">15.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, WXGA+(1440 x 900)</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i5 Coffee lake, 7020U, 2.30 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	4 GB, DDR4 (2 khe), 2133 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 645</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa tích hợp, Intel® UHD Graphics 620</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 14.9 mm, 1.37 kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 20.66 mm, 2.28 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -160,28 +161,28 @@
 		</div>
 		<div class="main__star">
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image mac3"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Apple Macbook Pro Coffee Lake 2018 i5 1.4GHz/8GB/256GB<a></div>
-				<div class="product-price">27.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell3"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Dell Vostro 3580 i5 8265U/4GB/1TB/2GB AMD520/Win10 (P75F010V80I)<a></div>
+				<div class="product-price">16.020.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, Retina (2560 x 1600)</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Coffee Lake, 1.40 GHz</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i5 Coffee Lake, 7020U, 2.30 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	8 GB, DDR4 (2 khe), 2133 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 6000</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa rời, AMD Radeon 520, 2GB</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 14.9 mm, 1.37 kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">	Dày 20.65 mm, 2.28 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -191,28 +192,28 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image mac4"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Macbook Pro Touch 16 inch 2019 i7 2.6GHz/16GB/512GB/4GB Radeon Pro 5300M <a></div>
-				<div class="product-price">56.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell4"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Dell Vostro 5580 i7 8265U/4GB/1TB/2GB AMD520/Win10 (P75F010V80I)<a></div>
+				<div class="product-price">27.020.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details">	16 inch, Retina (3072 x 1920</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i7 Coffee Lake, 2.60 GHz</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i7 Coffee Lake, 7020U, 2.30 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	8 GB, DDR4 (2 khe), 2133 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 645</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa rời, AMD Radeon 630, 4GB</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">	Dày 16.2 mm, 2.0 kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">	Dày 20.65 mm, 1.98 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -221,9 +222,11 @@
 					</div>
 				</div>
 			</div>
+			</div>
 		</div>
 
-	</div>
+
+	<div class="main__distance"></div>
 	<div class="main__distance"></div>
 	<div class="footer">
 		<div class="inner-footer">
@@ -258,7 +261,7 @@
 					<div class="footer-icon2"><i class="fa fa-envelope" aria-hidden='true'></i>  email@gmail.com </div>
 				</div>
 				<div class="social-media">
-					<a href="https://www.youtube.com/channel/UCOTKif5IzH0O1PoJdy4oplw?fbclid=IwAR2I43ypYidUrl5xul2Jq5DNHmr2AAwTIDxhTmx_m5eAc34KW2RHnckg1WQ"><i class="fa fa-facebook" aria-hidden='true'></i></a>
+					<a href="#"><i class="fa fa-facebook" aria-hidden='true'></i></a>
 					<a href="#"><i class="fa fa-instagram" aria-hidden='true'></i></a>
 					<a href="#"><i class="fa fa-twitter" aria-hidden='true'></i></a>
 					<a href="#"><i class="fa fa-google-plus" aria-hidden='true'></i></a>
