--- a/Sub-web/lenovo.html
+++ b/Sub-web/lenovo.html
@@ -4,19 +4,19 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Trang chủ</title>
-	<link rel="stylesheet" type="text/css" href="./css/main.css">
-	<link rel="stylesheet" type="text/css" href="./css/header.css">
-	<link rel="stylesheet" type="text/css" href="./css/body.css">
-	<link rel="stylesheet" type="text/css" href="./css/footer.css">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="../css/header.css">
+	<link rel="stylesheet" type="text/css" href="../css/body.css">
+	<link rel="stylesheet" type="text/css" href="../css/footer.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/componentLaptop.css">
+	<link rel="stylesheet" type="text/css" href="../css/componentLaptop.css">
 </head>
 <body>
 	<button id="scroll__top"><i class="fa fa-arrow-up"></i></button>
 	<div class="header">
 		<div class="header__head">
 			<div class="component__header">
-				<div class="header__logo"><a href="index.html"><div id="header__logo"></div></a></div>
+				<div class="header__logo"><a href="../index.html"><div id="header__logo"></div></a></div>
 				<div class="header__search">
 					<form method="get">
 						<input type="text" name="txtSearch" placeholder="Nhập tên máy tính cần tìm" maxlength="50" class="header__search-input">
@@ -62,7 +62,6 @@
 			</div>
 		</div>
 	</div>
-	
 	<div class="main">
 		<div class="main__distance"></div>
 
@@ -96,28 +95,28 @@
 
 		<div class="main__star">
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell1"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Dell Inspiron 3581 i3 7020U/4GB/1TB/Win10 (P75F005N81A)<a></div>
-				<div class="product-price">12.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image lenovo1"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Apple MacBook Air 2017 i5 1.8GHz/8GB/128GB (MQD32SA/A)<a></div>
+				<div class="product-price">19.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i3 Kabylake, 7020U, 2.30 GHz</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	4 GB, DDR4 (2 khe), 2133 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa tích hợp, Intel® UHD Graphics 620</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 6000</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">	Dày 20.66 mm, 2.28 kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 17 mm, 1.35 Kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -127,30 +126,28 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell2"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Dell Inspiron N3580 i5 8265U/4GB/1TB/Win10 (P75F106N80I)
-
-<a></div>
-				<div class="product-price">15.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image lenovo2"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Apple Macbook Pro Touch 2019 i5 1.4GHz/8GB/128GB <a></div>
+				<div class="product-price">32.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i5 Coffee lake, 7020U, 2.30 GHz</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	4 GB, DDR4 (2 khe), 2133 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa tích hợp, Intel® UHD Graphics 620</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 645</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 20.66 mm, 2.28 kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 14.9 mm, 1.37 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -163,28 +160,28 @@
 		</div>
 		<div class="main__star">
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell3"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Dell Vostro 3580 i5 8265U/4GB/1TB/2GB AMD520/Win10 (P75F010V80I)<a></div>
-				<div class="product-price">16.020.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image lenovo3"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Apple MacBook Air 2017 i5 1.8GHz/8GB/128GB (MQD32SA/A)<a></div>
+				<div class="product-price">19.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i5 Coffee Lake, 7020U, 2.30 GHz</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	8 GB, DDR4 (2 khe), 2133 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa rời, AMD Radeon 520, 2GB</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 6000</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">	Dày 20.65 mm, 2.28 kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 17 mm, 1.35 Kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -194,28 +191,28 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image dell4"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Dell Vostro 5580 i7 8265U/4GB/1TB/2GB AMD520/Win10 (P75F010V80I)<a></div>
-				<div class="product-price">27.020.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image lenovo4"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Apple Macbook Pro Touch 2019 i5 1.4GHz/8GB/128GB <a></div>
+				<div class="product-price">32.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, Full HD (1920 x 1080)</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">	Intel Core i7 Coffee Lake, 7020U, 2.30 GHz</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">	8 GB, DDR4 (2 khe), 2133 MHz</p></li>
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">	Card đồ họa rời, AMD Radeon 630, 4GB</p></li>
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 645</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">	Windows 10 Home SL</p></li>
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">	Dày 20.65 mm, 1.98 kg</p></li>
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 14.9 mm, 1.37 kg</p></li>
 						</div>
 					</ul>
 					<br>
@@ -224,9 +221,7 @@
 					</div>
 				</div>
 			</div>
-			</div>
 		</div>
-
 
 	<div class="main__distance"></div>
 	<div class="main__distance"></div>
