--- a/asus.html
+++ b/asus.html
@@ -4,19 +4,19 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Trang chủ</title>
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
-	<link rel="stylesheet" type="text/css" href="../css/header.css">
-	<link rel="stylesheet" type="text/css" href="../css/body.css">
-	<link rel="stylesheet" type="text/css" href="../css/footer.css">
+	<link rel="stylesheet" type="text/css" href="./css/main.css">
+	<link rel="stylesheet" type="text/css" href="./css/header.css">
+	<link rel="stylesheet" type="text/css" href="./css/body.css">
+	<link rel="stylesheet" type="text/css" href="./css/footer.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/componentLaptop.css">
+	<link rel="stylesheet" type="text/css" href="./css/componentLaptop.css">
 </head>
 <body>
 	<button id="scroll__top"><i class="fa fa-arrow-up"></i></button>
 	<div class="header">
 		<div class="header__head">
 			<div class="component__header">
-				<div class="header__logo"><a href="../index.html"><div id="header__logo"></div></a></div>
+				<div class="header__logo"><a href="index.html"><div id="header__logo"></div></a></div>
 				<div class="header__search">
 					<form method="get">
 						<input type="text" name="txtSearch" placeholder="Nhập tên máy tính cần tìm" maxlength="50" class="header__search-input">
@@ -62,9 +62,9 @@
 			</div>
 		</div>
 	</div>
+
 	<div class="main">
 		<div class="main__distance"></div>
-
 		<div class="component__main">
 			<div class="main__title">THƯƠNG HIỆU LAPTOP</div>
 			<div class="main__laptop">
@@ -90,6 +90,7 @@
 				</div>
 			</div>
 		</div>
+		
 		<div class="main__distance"></div>
 
 		<div class="main__star">
