--- a/index.html
+++ b/index.html
@@ -32,29 +32,29 @@
 					<a href="#" class="link__laptop"><i class="fa fa-laptop"></i>
 						<ul class="sub__menu">
 							<li class="sub__menu-element">
-								<a href="./Sub-web/apple.html" class="link__laptop"><i class="fa fa-apple"></i> MacOS</a>
+								<a href="apple.html" class="link__laptop"><i class="fa fa-apple"></i> MacOS</a>
 							</li>
 							<li class="sub__menu-element">
 								<a href="#" class="link__laptop link__sub2"><i class="fa fa-windows"></i> Windows
 									<ul class="sub2__menu">
-										<li class="sub__menu-element"><a href="./Sub-web/dell.html" class="link__laptop">Dell</a></li>
-										<li class="sub__menu-element"><a href="./Sub-web/asus.html" class="link__laptop">Asus</a></li>
-										<li class="sub__menu-element"><a href="./Sub-web/lenovo.html" class="link__laptop">Lenovo</a></li>
-										<li class="sub__menu-element"><a href="./Sub-web/hp.html" class="link__laptop">HP</a></li>
+										<li class="sub__menu-element"><a href="dell.html" class="link__laptop">Dell</a></li>
+										<li class="sub__menu-element"><a href="asus.html" class="link__laptop">Asus</a></li>
+										<li class="sub__menu-element"><a href="lenovo.html" class="link__laptop">Lenovo</a></li>
+										<li class="sub__menu-element"><a href="hp.html" class="link__laptop">HP</a></li>
 									</ul>
 								</a>
 							</li>
 						</ul>
 					</a>
 				</div>
-				<div class="header__laptop"><a href="./Sub-web/apple.html" class="link__laptop"><i class="fa fa-apple"></i> MacOS</a></div>
+				<div class="header__laptop"><a href="apple.html" class="link__laptop"><i class="fa fa-apple"></i> MacOS</a></div>
 				<div class="header__laptop">
 					<a href="#" class="link__laptop"><i class="fa fa-windows"></i> Windows
 						<ul class="sub__menu" style="text-align: center;">
-							<li class="sub__menu-element"><a href="./Sub-web/dell.html" class="link__laptop">Dell</a></li>
-							<li class="sub__menu-element"><a href="./Sub-web/asus.html" class="link__laptop">Asus</a></li>
-							<li class="sub__menu-element"><a href="./Sub-web/lenovo.html" class="link__laptop">Lenovo</a></li>
-							<li class="sub__menu-element"><a href="./Sub-web/hp.html" class="link__laptop">HP</a></li>
+							<li class="sub__menu-element"><a href="dell.html" class="link__laptop">Dell</a></li>
+							<li class="sub__menu-element"><a href="asus.html" class="link__laptop">Asus</a></li>
+							<li class="sub__menu-element"><a href="lenovo.html" class="link__laptop">Lenovo</a></li>
+							<li class="sub__menu-element"><a href="hp.html" class="link__laptop">HP</a></li>
 						</ul>
 					</a>
 				</div>	
@@ -92,23 +92,23 @@
 			<div class="main__title">THƯƠNG HIỆU LAPTOP</div>
 			<div class="main__laptop">
 				<div class="main__laptop-component">
-					<a href="./Sub-web/apple.html"><div class="laptop__component apple"></div></a>
+					<a href="apple.html"><div class="laptop__component apple"></div></a>
 					<div><label>Apple (Macbook)</label></div>
 				</div>
 				<div class="main__laptop-component">
-					<a href="./Sub-web/dell.html"><div class="laptop__component dell"></div></a>
+					<a href="dell.html"><div class="laptop__component dell"></div></a>
 					<div><label>Dell</label></div>
 				</div>
 				<div class="main__laptop-component">
-					<a href="./Sub-web/lenovo.html"><div class="laptop__component lenovo"></div></a>
+					<a href="lenovo.html"><div class="laptop__component lenovo"></div></a>
 					<div><label>Lenovo</label></div>
 				</div>
 				<div class="main__laptop-component">
-					<a href="./Sub-web/asus.html"><div class="laptop__component asus"></div></a>
+					<a href="asus.html"><div class="laptop__component asus"></div></a>
 					<div><label>Asus</label></div>
 				</div>
 				<div class="main__laptop-component">
-					<a href="./Sub-web/hp.html"><div class="laptop__component hp"></div></a>
+					<a href="hp.html"><div class="laptop__component hp"></div></a>
 					<div><label>HP</label></div>
 				</div>
 			</div>
