--- a/lenovo.html
+++ b/lenovo.html
@@ -4,19 +4,19 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>Trang chủ</title>
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
-	<link rel="stylesheet" type="text/css" href="../css/header.css">
-	<link rel="stylesheet" type="text/css" href="../css/body.css">
-	<link rel="stylesheet" type="text/css" href="../css/footer.css">
+	<link rel="stylesheet" type="text/css" href="./css/main.css">
+	<link rel="stylesheet" type="text/css" href="./css/header.css">
+	<link rel="stylesheet" type="text/css" href="./css/body.css">
+	<link rel="stylesheet" type="text/css" href="./css/footer.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="../css/componentLaptop.css">
+	<link rel="stylesheet" type="text/css" href="./css/componentLaptop.css">
 </head>
 <body>
 	<button id="scroll__top"><i class="fa fa-arrow-up"></i></button>
 	<div class="header">
 		<div class="header__head">
 			<div class="component__header">
-				<div class="header__logo"><a href="../index.html"><div id="header__logo"></div></a></div>
+				<div class="header__logo"><a href="index.html"><div id="header__logo"></div></a></div>
 				<div class="header__search">
 					<form method="get">
 						<input type="text" name="txtSearch" placeholder="Nhập tên máy tính cần tìm" maxlength="50" class="header__search-input">
@@ -62,6 +62,7 @@
 			</div>
 		</div>
 	</div>
+		
 	<div class="main">
 		<div class="main__distance"></div>
 
@@ -95,7 +96,7 @@
 
 		<div class="main__star">
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image mac1"></div></a></div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image lenovo1"></div></a></div>
 				<div class="product-name"><a class="product-link" href="#">Apple MacBook Air 2017 i5 1.8GHz/8GB/128GB (MQD32SA/A)<a></div>
 				<div class="product-price">19.990.000đ</div>
 				<div class="product-description">
@@ -126,13 +127,13 @@
 				</div>
 			</div>
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image mac2"></div></a></div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image lenovo2"></div></a></div>
 				<div class="product-name"><a class="product-link" href="#">Apple Macbook Pro Touch 2019 i5 1.4GHz/8GB/128GB <a></div>
 				<div class="product-price">32.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 15.6 inch, WXGA+(1440 x 900)</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
 							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
@@ -160,22 +161,53 @@
 		</div>
 		<div class="main__star">
 			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image mac3"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Apple Macbook Pro Coffee Lake 2018 i5 1.4GHz/8GB/256GB<a></div>
-				<div class="product-price">27.990.000đ</div>
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image lenovo3"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Apple MacBook Air 2017 i5 1.8GHz/8GB/128GB (MQD32SA/A)<a></div>
+				<div class="product-price">19.990.000đ</div>
 				<div class="product-description">
 					<ul class="product-stat">
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, Retina (2560 x 1600)</p></li>
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
 						</div>
 						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Coffee Lake, 1.40 GHz</p></li>
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
 						</div>
 						<div class="product-stat-component">
 							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
 						</div>
 						<div class="product-stat-component">
 							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 6000</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">Dày 17 mm, 1.35 Kg</p></li>
+						</div>
+					</ul>
+					<br>
+					<div class="product-purchase">
+						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
+					</div>
+				</div>
+			</div>
+			<div class="product product-1">
+				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image lenovo4"></div></a></div>
+				<div class="product-name"><a class="product-link" href="#">Apple Macbook Pro Touch 2019 i5 1.4GHz/8GB/128GB <a></div>
+				<div class="product-price">32.990.000đ</div>
+				<div class="product-description">
+					<ul class="product-stat">
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details"> 13.3 inch, WXGA+(1440 x 900)</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i5 Broadwell, 1.80 GHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
+						</div>
+						<div class="product-stat-component">
+							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 645</p></li>
 						</div>
 						<div class="product-stat-component">
 							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
@@ -190,40 +222,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="product product-1">
-				<div class="product-image product-link-image1"><a class="link-image" href="#"><div class="product-link-image mac4"></div></a></div>
-				<div class="product-name"><a class="product-link" href="#">Macbook Pro Touch 16 inch 2019 i7 2.6GHz/16GB/512GB/4GB Radeon Pro 5300M <a></div>
-				<div class="product-price">56.990.000đ</div>
-				<div class="product-description">
-					<ul class="product-stat">
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Màn hình:</b><p class="product-stat-details">	16 inch, Retina (3072 x 1920</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">CPU:</b><p class="product-stat-details">Intel Core i7 Coffee Lake, 2.60 GHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">RAM:</b><p class="product-stat-details">8 GB, DDR3L(On board), 1600 MHz</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">VGA:</b><p class="product-stat-details">Card đồ họa tích hợp, Intel HD Graphics 645</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">HDH:</b><p class="product-stat-details">Mac OS</p></li>
-						</div>
-						<div class="product-stat-component">
-							<li><b class="product-stat-title">Nặng:</b><p class="product-stat-details">	Dày 16.2 mm, 2.0 kg</p></li>
-						</div>
-					</ul>
-					<br>
-					<div class="product-purchase">
-						<button class="button-purchase"><i class="fa fa-plus" style="text-align: center;"></i></button>
-					</div>
-				</div>
-			</div>
 		</div>
 
-	</div>
+	<div class="main__distance"></div>
 	<div class="main__distance"></div>
 	<div class="footer">
 		<div class="inner-footer">
@@ -258,7 +259,7 @@
 					<div class="footer-icon2"><i class="fa fa-envelope" aria-hidden='true'></i>  email@gmail.com </div>
 				</div>
 				<div class="social-media">
-					<a href="https://www.youtube.com/channel/UCOTKif5IzH0O1PoJdy4oplw?fbclid=IwAR2I43ypYidUrl5xul2Jq5DNHmr2AAwTIDxhTmx_m5eAc34KW2RHnckg1WQ"><i class="fa fa-facebook" aria-hidden='true'></i></a>
+					<a href="#"><i class="fa fa-facebook" aria-hidden='true'></i></a>
 					<a href="#"><i class="fa fa-instagram" aria-hidden='true'></i></a>
 					<a href="#"><i class="fa fa-twitter" aria-hidden='true'></i></a>
 					<a href="#"><i class="fa fa-google-plus" aria-hidden='true'></i></a>
